manifests/_kalm-benchmark-unrestricted-ns-c849031e.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/part-of: kalm-benchmark
  name: kalm-benchmark-unrestricted-ns
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/part-of: kalm-benchmark
  name: kalm-benchmark-unrestricted-ns
spec:
  podSelector: {}
  policyTypes:
    - Egress
    - Ingress
